--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -58,7 +58,7 @@
             visibility: hidden;
             position: relative;
             font-size: large;
-            color: crimson;
+            color: rgb(198, 24, 24);
             top: 60%;
             font-weight: bold;
             animation: blinky 2s ease-in-out 3.5s 1;
